--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -12,5 +12,10 @@
   "module.checkout.form.upload.image": "Enviar imagens (Máx: 4)",
   "module.checkout.form.choose.image": "Escolha até 4 imagens",
   "module.checkout.form.select.theme": "Selecione um tema",
-  "module.checkout.form.checkout.button": "Finalizar compra"
+  "module.checkout.form.checkout.button": "Finalizar compra",
+  "module.checkout.preview.title": "Preview",
+  "module.checkout.preview.dear": "",
+  "module.checkout.preview.loading.theme": "Carregando seu modelo...",
+  "module.checkout.preview.no.theme.selected": "Nenhum tema selecionado",
+  "module.checkout.preview.instructions": "Escolha um modelo para visualizar aqui 🎉"
 }
