--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -55,5 +55,12 @@
   "module.landingpage.howitworks.step3.title": "Receba o Link e o QR Code",
   "module.landingpage.howitworks.step3.description": "Receba o link do seu site por e-mail junto com um QR code para compartilhar facilmente.",
   "module.landingpage.howitworks.step4.title": "Compartilhe e Comemore",
-  "module.landingpage.howitworks.step4.description": "Envie o link e o QR code para familiares e amigos e celebre juntos!"
+  "module.landingpage.howitworks.step4.description": "Envie o link e o QR code para familiares e amigos e celebre juntos!",
+  "module.landingpage.hero.headline.line1": "A Maneira Mais Fácil de Criar um",
+  "module.landingpage.hero.headline.line2": "Site de Aniversário Incrível!",
+  "module.landingpage.hero.description.part1": "Surpreenda quem você ama com uma página de aniversário ",
+  "module.landingpage.hero.description.bold": "personalizada",
+  "module.landingpage.hero.description.part2": ", com mensagens emocionantes, fotos, temas personalizados e fácil compartilhamento.",
+  "module.landingpage.hero.description.highlight": "Sem precisar programar!",
+  "module.landingpage.hero.image.alt": "Prévia do Site de Aniversário"
 }
