--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -62,5 +62,24 @@
   "module.landingpage.hero.description.bold": "personalizada",
   "module.landingpage.hero.description.part2": ", com mensagens emocionantes, fotos, temas personalizados e fácil compartilhamento.",
   "module.landingpage.hero.description.highlight": "Sem precisar programar!",
-  "module.landingpage.hero.image.alt": "Prévia do Site de Aniversário"
+  "module.landingpage.hero.image.alt": "Prévia do Site de Aniversário",
+  "module.landingpage.faq.title": "Perguntas Frequentes",
+  "module.landingpage.faq.q1.question": "Posso editar a página de aniversário após a compra?",
+  "module.landingpage.faq.q1.answer": "Não, a página de aniversário não pode ser editada após a compra. Uma vez criada, todos os detalhes são finais.",
+  "module.landingpage.faq.q2.question": "Por quanto tempo a página ficará online?",
+  "module.landingpage.faq.q2.answer": "A duração da página depende do plano escolhido. O plano Básico oferece acesso por 1 ano, enquanto o plano Premium fornece acesso vitalício, sem expiração.",
+  "module.landingpage.faq.q3.question": "Existe um teste gratuito?",
+  "module.landingpage.faq.q3.answer": "Não oferecemos teste gratuito, mas disponibilizamos uma compra única com acesso vitalício no plano Premium.",
+  "module.landingpage.faq.q4.question": "Posso adicionar música à página de aniversário?",
+  "module.landingpage.faq.q4.answer": "Não, o envio de músicas não é suportado no momento. A página permite imagens, mas não possui recurso de áudio.",
+  "module.landingpage.faq.q5.question": "Posso enviar vídeos e imagens?",
+  "module.landingpage.faq.q5.answer": "Você pode enviar imagens para personalizar a página de aniversário. No entanto, o envio de vídeos não é suportado.",
+  "module.landingpage.faq.q6.question": "Como posso compartilhar a página de aniversário?",
+  "module.landingpage.faq.q6.answer": "Após a compra, você receberá um link exclusivo e um QR code que podem ser facilmente compartilhados com amigos e familiares.",
+  "module.landingpage.faq.q7.question": "Preciso renovar minha compra todos os anos?",
+  "module.landingpage.faq.q7.answer": "Não! O plano Premium oferece acesso vitalício, enquanto o plano Básico dura 1 ano. Não há taxas ocultas nem assinaturas.",
+  "module.landingpage.faq.q8.question": "Posso escolher diferentes temas para a página de aniversário?",
+  "module.landingpage.faq.q8.answer": "Sim! Você pode escolher entre diversos temas lindamente projetados para combinar com a celebração do aniversário.",
+  "module.landingpage.faq.q9.question": "Posso criar várias páginas de aniversário com uma única compra?",
+  "module.landingpage.faq.q9.answer": "Não, cada compra dá direito à criação de apenas uma página personalizada. Se quiser outra, será necessário realizar uma nova compra."
 }
