--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -62,5 +62,24 @@
   "module.landingpage.hero.description.bold": "personalized",
   "module.landingpage.hero.description.part2": " birthday page, featuring heartfelt messages, photos, custom themes, and easy sharing.",
   "module.landingpage.hero.description.highlight": "No coding required!",
-  "module.landingpage.hero.image.alt": "Birthday Website Preview"
+  "module.landingpage.hero.image.alt": "Birthday Website Preview",
+  "module.landingpage.faq.title": "Frequently Asked Questions",
+  "module.landingpage.faq.q1.question": "Can I edit the birthday page after purchase?",
+  "module.landingpage.faq.q1.answer": "No, the birthday page cannot be edited after purchase. Once created, all the details are final.",
+  "module.landingpage.faq.q2.question": "How long will the page stay online?",
+  "module.landingpage.faq.q2.answer": "The page duration depends on your chosen plan. The Basic plan gives you access for 1 year, while the Premium plan provides lifetime access with no expiration.",
+  "module.landingpage.faq.q3.question": "Is there a free trial?",
+  "module.landingpage.faq.q3.answer": "We do not offer a free trial, but we provide a one-time purchase with lifetime access for Premium users.",
+  "module.landingpage.faq.q4.question": "Can I add music to the birthday page?",
+  "module.landingpage.faq.q4.answer": "No, music uploads are not supported at this time. The page allows images but does not include an audio feature.",
+  "module.landingpage.faq.q5.question": "Can I upload videos and images?",
+  "module.landingpage.faq.q5.answer": "You can upload images to personalize the birthday page. However, video uploads are not supported.",
+  "module.landingpage.faq.q6.question": "How can I share the birthday page?",
+  "module.landingpage.faq.q6.answer": "After purchase, you will receive a unique link and a QR code that you can easily share with family and friends.",
+  "module.landingpage.faq.q7.question": "Do I need to renew my purchase every year?",
+  "module.landingpage.faq.q7.answer": "No! The Premium plan offers lifetime access, while the Basic plan lasts for 1 year. There are no hidden fees or subscriptions.",
+  "module.landingpage.faq.q8.question": "Can I choose different themes for the birthday page?",
+  "module.landingpage.faq.q8.answer": "Yes! You can select from multiple beautifully designed themes to match the birthday celebration.",
+  "module.landingpage.faq.q9.question": "Can I create multiple birthday pages with one purchase?",
+  "module.landingpage.faq.q9.answer": "No, each purchase grants access to create only one personalized birthday page. If you need another, you will need to make a new purchase."
 }
