feat: :sparkles: add i18n to testimonials

--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -81,5 +81,30 @@
   "module.landingpage.faq.q8.question": "Can I choose different themes for the birthday page?",
   "module.landingpage.faq.q8.answer": "Yes! You can select from multiple beautifully designed themes to match the birthday celebration.",
   "module.landingpage.faq.q9.question": "Can I create multiple birthday pages with one purchase?",
-  "module.landingpage.faq.q9.answer": "No, each purchase grants access to create only one personalized birthday page. If you need another, you will need to make a new purchase."
+  "module.landingpage.faq.q9.answer": "No, each purchase grants access to create only one personalized birthday page. If you need another, you will need to make a new purchase.",
+  "module.landingpage.ownership.title": "Own Your Birthday Website Forever!",
+  "module.landingpage.ownership.description.beforeHighlight": "Celebrate birthdays in a unique way with a website that lasts a lifetime!",
+  "module.landingpage.ownership.description.highlight": "Basic plan includes 1-year access, while Premium unlocks lifetime ownership!",
+  "module.landingpage.ownership.premium.label": "PREMIUM",
+  "module.landingpage.ownership.premium.photos.title": "Add Photos",
+  "module.landingpage.ownership.premium.photos.description": "Make birthdays even more special by uploading up to 4 images to personalize your celebration page.",
+  "module.landingpage.ownership.premium.lifetime.title": "Lifetime Access",
+  "module.landingpage.ownership.premium.lifetime.description": "Your memories deserve to last forever! With Lifetime Access, your personalized birthday website will remain online for a lifetime!",
+  "module.landingpage.ownership.feature.themes.title": "Custom Themes",
+  "module.landingpage.ownership.feature.themes.description": "Choose from a variety of themes to match the birthday celebration.",
+  "module.landingpage.ownership.feature.messages.title": "Personalized Messages",
+  "module.landingpage.ownership.feature.messages.description": "Include heartfelt birthday wishes with photos and videos.",
+  "module.landingpage.ownership.feature.qr.title": "QR Code Sharing",
+  "module.landingpage.ownership.feature.qr.description": "Get a unique QR code for quick access and easy sharing.",
+  "module.landingpage.testimonials.title": "What Our Users Say",
+  "module.landingpage.testimonials.1.quote": "This was the best surprise for my friend's birthday! The setup was incredibly easy, and it looked amazing.",
+  "module.landingpage.testimonials.1.name": "Emily R.",
+  "module.landingpage.testimonials.2.quote": "I was able to create a stunning, personalized birthday page in minutes. My family absolutely loved it!",
+  "module.landingpage.testimonials.2.name": "Jason T.",
+  "module.landingpage.testimonials.3.quote": "This is the best one-time purchase ever! No ads, fully customizable, and a unique way to celebrate birthdays!",
+  "module.landingpage.testimonials.3.name": "Sophia M.",
+  "module.landingpage.testimonials.4.quote": "The QR code made it so easy to share the page with friends. Highly recommend this service!",
+  "module.landingpage.testimonials.4.name": "David L.",
+  "module.landingpage.testimonials.5.quote": "A beautiful and stress-free way to celebrate! The themes are great, and the process is simple.",
+  "module.landingpage.testimonials.5.name": "Olivia K."
 }
