--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -81,5 +81,30 @@
   "module.landingpage.faq.q8.question": "Posso escolher diferentes temas para a página de aniversário?",
   "module.landingpage.faq.q8.answer": "Sim! Você pode escolher entre diversos temas lindamente projetados para combinar com a celebração do aniversário.",
   "module.landingpage.faq.q9.question": "Posso criar várias páginas de aniversário com uma única compra?",
-  "module.landingpage.faq.q9.answer": "Não, cada compra dá direito à criação de apenas uma página personalizada. Se quiser outra, será necessário realizar uma nova compra."
+  "module.landingpage.faq.q9.answer": "Não, cada compra dá direito à criação de apenas uma página personalizada. Se quiser outra, será necessário realizar uma nova compra.",
+  "module.landingpage.ownership.title": "Tenha seu Site de Aniversário para Sempre!",
+  "module.landingpage.ownership.description.beforeHighlight": "Comemore aniversários de forma única com um site que dura a vida toda!",
+  "module.landingpage.ownership.description.highlight": "O plano Básico oferece acesso por 1 ano, enquanto o Premium garante acesso vitalício!",
+  "module.landingpage.ownership.premium.label": "PREMIUM",
+  "module.landingpage.ownership.premium.photos.title": "Adicione Fotos",
+  "module.landingpage.ownership.premium.photos.description": "Torne o aniversário ainda mais especial enviando até 4 imagens para personalizar a página de celebração.",
+  "module.landingpage.ownership.premium.lifetime.title": "Acesso Vitalício",
+  "module.landingpage.ownership.premium.lifetime.description": "Suas memórias merecem durar para sempre! Com Acesso Vitalício, seu site personalizado ficará online por toda a vida!",
+  "module.landingpage.ownership.feature.themes.title": "Temas Personalizados",
+  "module.landingpage.ownership.feature.themes.description": "Escolha entre diversos temas para combinar com a celebração de aniversário.",
+  "module.landingpage.ownership.feature.messages.title": "Mensagens Personalizadas",
+  "module.landingpage.ownership.feature.messages.description": "Inclua mensagens de aniversário emocionantes com fotos e vídeos.",
+  "module.landingpage.ownership.feature.qr.title": "Compartilhamento por QR Code",
+  "module.landingpage.ownership.feature.qr.description": "Receba um QR code exclusivo para acesso rápido e compartilhamento fácil.",
+  "module.landingpage.testimonials.title": "O Que Dizem Nossos Usuários",
+  "module.landingpage.testimonials.1.quote": "Essa foi a melhor surpresa para o aniversário da minha amiga! A configuração foi super fácil e ficou linda.",
+  "module.landingpage.testimonials.1.name": "Emily R.",
+  "module.landingpage.testimonials.2.quote": "Consegui criar uma página de aniversário personalizada em poucos minutos. Minha família amou!",
+  "module.landingpage.testimonials.2.name": "Jason T.",
+  "module.landingpage.testimonials.3.quote": "Foi a melhor compra única que já fiz! Sem anúncios, totalmente personalizável e uma forma única de comemorar aniversários!",
+  "module.landingpage.testimonials.3.name": "Sophia M.",
+  "module.landingpage.testimonials.4.quote": "O QR code facilitou muito o compartilhamento da página com os amigos. Recomendo demais!",
+  "module.landingpage.testimonials.4.name": "David L.",
+  "module.landingpage.testimonials.5.quote": "Uma forma linda e sem estresse de comemorar! Os temas são ótimos e o processo é simples.",
+  "module.landingpage.testimonials.5.name": "Olivia K."
 }
