feat: :sparkles: i18n to privacy policy

--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -106,5 +106,34 @@
   "module.landingpage.testimonials.4.quote": "The QR code made it so easy to share the page with friends. Highly recommend this service!",
   "module.landingpage.testimonials.4.name": "David L.",
   "module.landingpage.testimonials.5.quote": "A beautiful and stress-free way to celebrate! The themes are great, and the process is simple.",
-  "module.landingpage.testimonials.5.name": "Olivia K."
+  "module.landingpage.testimonials.5.name": "Olivia K.",
+  "module.privacy.title": "Privacy Policy",
+
+  "module.privacy.lastUpdated.label": "Last Updated:",
+  "module.privacy.lastUpdated.date": "March 16, 2025",
+  "module.privacy.section1.title": "1. Introduction",
+  "module.privacy.section1.content": "Your privacy is important to us. This Privacy Policy explains how we collect, use, store, and protect your personal information when you use our platform.",
+  "module.privacy.section2.title": "2. Information We Collect",
+  "module.privacy.section2.intro": "When you use our platform, we collect the following information:",
+  "module.privacy.section2.item1.title": "Registration Details:",
+  "module.privacy.section2.item1.desc": " [update with all the things that I collect]",
+  "module.privacy.section2.item2.title": "Payment Information:",
+  "module.privacy.section2.item2.desc": " Email address used for payment processing via Stripe and for sending the personalized page link.",
+  "module.privacy.section3.title": "3. How We Use Your Information",
+  "module.privacy.section3.intro": "We use your information to:",
+  "module.privacy.section3.item1": "Process payments and send the personalized page link via email.",
+  "module.privacy.section3.item2": "Customize and generate your personalized page using the details provided.",
+  "module.privacy.section3.item3": "Improve our services and provide customer support.",
+  "module.privacy.section4.title": "4. Information Sharing",
+  "module.privacy.section4.content": "We do not share your personal information with third parties, except when necessary for payment processing (via Stripe) or when required by law.",
+  "module.privacy.section5.title": "5. Data Security",
+  "module.privacy.section5.content": "We implement security measures to protect your personal data against unauthorized access, misuse, or disclosure. However, no online data transmission is 100% secure, and we cannot guarantee absolute security.",
+  "module.privacy.section6.title": "6. Data Retention",
+  "module.privacy.section6.content": "We retain your personal information only for as long as necessary to fulfill the purposes for which it was collected or as required by applicable laws.",
+  "module.privacy.section7.title": "7. Your Rights",
+  "module.privacy.section7.content": "You have the right to access, correct, or request the deletion of your personal information. To exercise these rights, please contact us at",
+  "module.privacy.section8.title": "8. Changes to This Privacy Policy",
+  "module.privacy.section8.content": "We may update this Privacy Policy periodically. Any changes will be reflected in the “Last Updated” date at the top of this page. It is your responsibility to review this policy regularly to stay informed.",
+  "module.privacy.section9.title": "9. Contact",
+  "module.privacy.section9.content": "If you have any questions about this Privacy Policy, please contact us at"
 }
