--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -106,5 +106,34 @@
   "module.landingpage.testimonials.4.quote": "O QR code facilitou muito o compartilhamento da página com os amigos. Recomendo demais!",
   "module.landingpage.testimonials.4.name": "David L.",
   "module.landingpage.testimonials.5.quote": "Uma forma linda e sem estresse de comemorar! Os temas são ótimos e o processo é simples.",
-  "module.landingpage.testimonials.5.name": "Olivia K."
+  "module.landingpage.testimonials.5.name": "Olivia K.",
+
+  "module.privacy.title": "Política de Privacidade",
+  "module.privacy.lastUpdated.label": "Última atualização:",
+  "module.privacy.lastUpdated.date": "16 de março de 2025",
+  "module.privacy.section1.title": "1. Introdução",
+  "module.privacy.section1.content": "Sua privacidade é importante para nós. Esta Política de Privacidade explica como coletamos, usamos, armazenamos e protegemos suas informações pessoais ao utilizar nossa plataforma.",
+  "module.privacy.section2.title": "2. Informações que Coletamos",
+  "module.privacy.section2.intro": "Ao utilizar nossa plataforma, coletamos as seguintes informações:",
+  "module.privacy.section2.item1.title": "Dados de Registro:",
+  "module.privacy.section2.item1.desc": " [atualizar com todos os dados que coletamos]",
+  "module.privacy.section2.item2.title": "Informações de Pagamento:",
+  "module.privacy.section2.item2.desc": " Endereço de e-mail usado para processar pagamentos via Stripe e enviar o link da página personalizada.",
+  "module.privacy.section3.title": "3. Como Utilizamos Suas Informações",
+  "module.privacy.section3.intro": "Utilizamos suas informações para:",
+  "module.privacy.section3.item1": "Processar pagamentos e enviar o link da página personalizada por e-mail.",
+  "module.privacy.section3.item2": "Personalizar e gerar sua página com base nos dados fornecidos.",
+  "module.privacy.section3.item3": "Melhorar nossos serviços e oferecer suporte ao cliente.",
+  "module.privacy.section4.title": "4. Compartilhamento de Informações",
+  "module.privacy.section4.content": "Não compartilhamos suas informações pessoais com terceiros, exceto quando necessário para o processamento de pagamentos (via Stripe) ou exigido por lei.",
+  "module.privacy.section5.title": "5. Segurança dos Dados",
+  "module.privacy.section5.content": "Implementamos medidas de segurança para proteger seus dados pessoais contra acessos não autorizados, uso indevido ou divulgação. No entanto, nenhuma transmissão de dados online é 100% segura, e não podemos garantir segurança absoluta.",
+  "module.privacy.section6.title": "6. Retenção de Dados",
+  "module.privacy.section6.content": "Mantemos suas informações pessoais apenas pelo tempo necessário para cumprir os propósitos para os quais foram coletadas ou conforme exigido por lei.",
+  "module.privacy.section7.title": "7. Seus Direitos",
+  "module.privacy.section7.content": "Você tem o direito de acessar, corrigir ou solicitar a exclusão de suas informações pessoais. Para exercer esses direitos, entre em contato conosco em",
+  "module.privacy.section8.title": "8. Alterações Nesta Política de Privacidade",
+  "module.privacy.section8.content": "Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão refletidas na data de “Última atualização” no topo da página. É sua responsabilidade revisar esta política regularmente para se manter informado.",
+  "module.privacy.section9.title": "9. Contato",
+  "module.privacy.section9.content": "Se tiver dúvidas sobre esta Política de Privacidade, entre em contato conosco em"
 }
