feat: :sparkles: add i18n terms of service

--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -135,5 +135,29 @@
   "module.privacy.section8.title": "8. Changes to This Privacy Policy",
   "module.privacy.section8.content": "We may update this Privacy Policy periodically. Any changes will be reflected in the “Last Updated” date at the top of this page. It is your responsibility to review this policy regularly to stay informed.",
   "module.privacy.section9.title": "9. Contact",
-  "module.privacy.section9.content": "If you have any questions about this Privacy Policy, please contact us at"
+  "module.privacy.section9.content": "If you have any questions about this Privacy Policy, please contact us at",
+
+  "module.terms.title": "Terms of Service",
+  "module.terms.lastUpdated.label": "Last Updated:",
+  "module.terms.lastUpdated.date": "March 16, 2025",
+  "module.terms.section1.title": "1. Acceptance of Terms",
+  "module.terms.section1.content": "By accessing and using our platform, you agree to comply with and be bound by these Terms of Service. If you do not agree with any part of these terms, you should not use the platform.",
+  "module.terms.section2.title": "2. Service Description",
+  "module.terms.section2.content": "Our platform allows users to create a personalized birthday website by filling out a form with their [Put all here] selection. After completing the form, users proceed to checkout, and upon successful payment, they receive a unique link via email.",
+  "module.terms.section3.title": "3. Registration and Security",
+  "module.terms.section3.content": "To use our service, you must provide a valid email address. We do not share your email with third parties.",
+  "module.terms.section4.title": "4. Privacy",
+  "module.terms.section4.content": "We respect your privacy. We do not use your data for any type of processing or sale to third parties. The email you provide is used solely for sending the personalized page link.",
+  "module.terms.section5.title": "5. User Content",
+  "module.terms.section5.content": "You are responsible for the content you enter on the platform, including names and themes. We are not responsible for any inappropriate or unlawful content uploaded by users.",
+  "module.terms.section6.title": "6. Payments and Refunds",
+  "module.terms.section6.content": "All payments are processed through Stripe. After completing the payment, users will receive a link to their personalized page via email. We do not offer refunds except in exceptional cases at our sole discretion.",
+  "module.terms.section7.title": "7. Service Modifications",
+  "module.terms.section7.content": "We commit to keeping the service active and available for the agreed-upon period based on the selected plan. However, in exceptional circumstances beyond our control (such as legal, technical, or financial issues), we reserve the right to modify or discontinue the service. If discontinuation is necessary, we will make reasonable efforts to notify users in advance and provide alternative solutions where possible.",
+  "module.terms.section8.title": "8. Limitation of Liability",
+  "module.terms.section8.content": "Under no circumstances shall we be held liable for any indirect, incidental, special, or consequential damages arising from or related to the use or inability to use the platform.",
+  "module.terms.section9.title": "9. Changes to Terms",
+  "module.terms.section9.content": "We may update these Terms of Service periodically. Any changes will be reflected in the “Last Updated” date at the top of this page. It is your responsibility to review these terms regularly to stay informed.",
+  "module.terms.section10.title": "10. Contact",
+  "module.terms.section10.content": "If you have any questions regarding these Terms of Service, please contact us at <a href='mailto:[your email here]' class='text-blue-600 hover:underline'>[your email here]</a>."
 }
