--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -135,5 +135,29 @@
   "module.privacy.section8.title": "8. Alterações Nesta Política de Privacidade",
   "module.privacy.section8.content": "Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão refletidas na data de “Última atualização” no topo da página. É sua responsabilidade revisar esta política regularmente para se manter informado.",
   "module.privacy.section9.title": "9. Contato",
-  "module.privacy.section9.content": "Se tiver dúvidas sobre esta Política de Privacidade, entre em contato conosco em"
+  "module.privacy.section9.content": "Se tiver dúvidas sobre esta Política de Privacidade, entre em contato conosco em",
+
+  "module.terms.title": "Termos de Serviço",
+  "module.terms.lastUpdated.label": "Última atualização:",
+  "module.terms.lastUpdated.date": "16 de março de 2025",
+  "module.terms.section1.title": "1. Aceitação dos Termos",
+  "module.terms.section1.content": "Ao acessar e utilizar nossa plataforma, você concorda em cumprir e estar vinculado a estes Termos de Serviço. Caso não concorde com alguma parte dos termos, você não deve utilizar a plataforma.",
+  "module.terms.section2.title": "2. Descrição do Serviço",
+  "module.terms.section2.content": "Nossa plataforma permite que os usuários criem um site de aniversário personalizado preenchendo um formulário com suas escolhas [colocar todas aqui]. Após preencher o formulário, o usuário segue para o checkout e, após o pagamento bem-sucedido, recebe um link exclusivo por e-mail.",
+  "module.terms.section3.title": "3. Registro e Segurança",
+  "module.terms.section3.content": "Para utilizar nosso serviço, você deve fornecer um endereço de e-mail válido. Nós não compartilhamos seu e-mail com terceiros.",
+  "module.terms.section4.title": "4. Privacidade",
+  "module.terms.section4.content": "Respeitamos sua privacidade. Não utilizamos seus dados para nenhum tipo de processamento ou venda a terceiros. O e-mail fornecido é usado exclusivamente para envio do link da página personalizada.",
+  "module.terms.section5.title": "5. Conteúdo do Usuário",
+  "module.terms.section5.content": "Você é responsável pelo conteúdo inserido na plataforma, incluindo nomes e temas. Não nos responsabilizamos por conteúdo inadequado ou ilegal inserido por usuários.",
+  "module.terms.section6.title": "6. Pagamentos e Reembolsos",
+  "module.terms.section6.content": "Todos os pagamentos são processados via Stripe. Após concluir o pagamento, o usuário receberá um link para sua página personalizada por e-mail. Não oferecemos reembolsos, exceto em casos excepcionais, a nosso exclusivo critério.",
+  "module.terms.section7.title": "7. Modificações no Serviço",
+  "module.terms.section7.content": "Comprometemo-nos a manter o serviço ativo e disponível pelo período acordado conforme o plano selecionado. No entanto, em circunstâncias excepcionais fora de nosso controle (como questões legais, técnicas ou financeiras), reservamo-nos o direito de modificar ou descontinuar o serviço. Caso a descontinuação seja necessária, faremos esforços razoáveis para notificar os usuários com antecedência e oferecer soluções alternativas sempre que possível.",
+  "module.terms.section8.title": "8. Limitação de Responsabilidade",
+  "module.terms.section8.content": "Em nenhuma circunstância seremos responsáveis por quaisquer danos indiretos, incidentais, especiais ou consequenciais decorrentes do uso ou da incapacidade de uso da plataforma.",
+  "module.terms.section9.title": "9. Alterações nos Termos",
+  "module.terms.section9.content": "Podemos atualizar estes Termos de Serviço periodicamente. Quaisquer alterações serão refletidas na data de “Última atualização” no topo desta página. É sua responsabilidade revisar estes termos regularmente para se manter informado.",
+  "module.terms.section10.title": "10. Contato",
+  "module.terms.section10.content": "Se você tiver alguma dúvida sobre estes Termos de Serviço, entre em contato conosco em <a href='mailto:[your email here]' class='text-blue-600 hover:underline'>[your email here]</a>."
 }
